# starting-ragchatbot-codebase

./: .editorconfig  .gitignore  frontend-changes.md  pyproject.toml
.claude/: settings.local.json
backend/: ai_generator.py  app.py  config.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  helpers.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_content_queries.py
frontend/: index.html  script.js  style.css
scripts/: check.sh  format.sh
